[gd_scene load_steps=15 format=2]

[ext_resource path="res://sprites/robot-spritesheet.png" type="Texture" id=1]
[ext_resource path="res://scenes/Mech/Mech.gd" type="Script" id=2]
[ext_resource path="res://scenes/LaserBeam/LaserBeam.tscn" type="PackedScene" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 50.0

[sub_resource type="Animation" id=2]
resource_name = "idle_e"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 16, 0, 15, 22 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle_n"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 0, 0, 14, 19 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "idle_ne"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 66, 0, 15, 20 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "idle_nw"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 117, 0, 15, 20 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "idle_s"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 33, 0, 14, 18 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "idle_se"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 83, 0, 15, 21 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "idle_sw"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 100, 0, 15, 21 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "idle_w"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 49, 0, 15, 22 ) ]
}

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.168627, 1, 0, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.278431, 0.552941, 0.027451, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.207843, 0.2, 0.2, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.141176, 0.133333, 0.133333, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
anti_aliasing = false

[node name="Mech" type="Area2D"]
collision_layer = 2
collision_mask = 6
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="RayCast2D" type="RayCast2D" parent="."]
cast_to = Vector2( 0, -50 )
collision_mask = 6
collide_with_areas = true
collide_with_bodies = false

[node name="LaserBeam" parent="." instance=ExtResource( 3 )]

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
offset = Vector2( 8, 0 )
region_enabled = true
region_rect = Rect2( 117, 0, 15, 20 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/idle_e = SubResource( 2 )
anims/idle_n = SubResource( 3 )
anims/idle_ne = SubResource( 4 )
anims/idle_nw = SubResource( 5 )
anims/idle_s = SubResource( 6 )
anims/idle_se = SubResource( 7 )
anims/idle_sw = SubResource( 8 )
anims/idle_w = SubResource( 9 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="TimerScan" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="ProgressBar" type="ProgressBar" parent="."]
margin_left = -8.0
margin_top = -18.0
margin_right = 8.0
margin_bottom = -16.0
custom_styles/fg = SubResource( 10 )
custom_styles/bg = SubResource( 11 )
step = 0.1
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="area_entered" from="." to="." method="_on_Mech_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="TimerScan" to="." method="_on_TimerScan_timeout"]
